tests/zer_fail/dalpha2_unreachable_args.zer
// EXPECTED: compile error
// @unreachable takes zero arguments

i32 main() {
    @unreachable(42);  // error: unreachable takes no args
    return 0;
}
